# utility

./: CMakeLists.txt  LICENSE  README.md
common/core/: BUILD  CMakeLists.txt  README.md  build.cmake  package.xml
common/core/files/cmake/: ara-core-config.cmake.in
common/core/files/pkgconfig/: ara-core.pc.in
common/core/include/public/ara/core/: abort.h  array.h  condition_variable.h  error_code.h  error_domain.h  exception.h  functional.h  future.h  future_inl.h  initialization.h  instance_specifier.h  map.h  nv_array.h  optional.h  promise.h  pthread_helper.h  result.h  span.h  string.h  string_view.h  utility.h  variant.h  variant_inl.h  vector.h
common/core/include/public/ara/core/internal/: core.h  enable_special_members.h
common/core/include/public/ara/core/platform_error_domain/: platform_error_domain.h
common/core/platform_error_domain/include/public/ara/com/: com_error_domain.h
common/core/platform_error_domain/include/public/ara/common/: manifest_error_domain.h
common/core/platform_error_domain/include/public/ara/core/: core_error_domain.h  future_error_domain.h
common/core/platform_error_domain/include/public/ara/diag/: diag_error_domain.h  diag_general_error_domain.h  diag_uds_nrc_error_domain.h
common/core/platform_error_domain/include/public/ara/diag/uds_transport/doip/: doip_error_domain.h
common/core/platform_error_domain/include/public/ara/exec/: exec_error_domain.h
common/core/platform_error_domain/include/public/ara/param/: parameter_error_domain.h
common/core/platform_error_domain/include/public/ara/phm/: phm_error_domain.h
common/core/platform_error_domain/include/public/ara/sm/: sm_error_domain.h
common/core/platform_error_domain/include/public/ara/ucm/: ucm_error_domain.h
common/core/src/: abort.cpp  all_headers.cpp
common/core/test/: BUILD  abort_test.cpp  array_test.cpp  condition_variable_test.cpp  core_error_domain_test.cpp  error_code_test.cpp  function_test.cpp  future_error_domain_test.cpp  instance_specifier_test.cpp  map_test.cpp  optional_test.cpp  promise_test.cpp  result_test.cpp  span_test.cpp  string_test.cpp  string_view_test.cpp  test.bzl  variant_test.cpp  vector_test.cpp
common/filesystem/include/private/ara/filesystem/: common.h  filesystem_logger.h
common/filesystem/include/public/ara/filesystem/: filesystem.h
common/filesystem/src/: filesystem.cc
common/filesystem/test/: BUILD  dir.cc
common/ipc/: CMakeLists.txt  README.md
common/ipc/cmake/: ara-ipcConfig.cmake.in
common/ipc/include/private/ara/ipc/: connection.h  connection_manager.h  domain_socket.h  handle.h  ipc_logger.h  ipc_utilites.h  request.h
common/ipc/include/public/ara/ipc/: client_domain_socket.h  ipc.h  ipc_base_message.h  ipc_message.h  new_ipc_message.h  process_handler.h  server_domain_socket.h
common/ipc/src/: CMakeLists.txt  client_domain_socket.cc  connection.cc  connection_manager.cc  domain_socket.cc  ipc_message.cc  new_ipc_message.cc  request.cc  server_domain_socket.cc
common/ipc/test/: BUILD  CMakeLists.txt  test_communication.cc  test_connect.cc  test_ipc_message.cc  test_reconnect.cc
common/log/: BUILD  CMakeLists.txt  README.md
common/log/cmake/: ara-logConfig.cmake.in
common/log/extension/aplog/: BUILD
common/log/extension/aplog/public/ara/log/: aplog.h
common/log/include/private/ara/log/: logmanager.h  utility.h
common/log/include/public/: CMakeLists.txt
common/log/include/public/ara/log/: common.h  log_stream.h  logger.h
common/log/src/: CMakeLists.txt  Log_configure.json  log_stream.cpp  logger.cpp  logmanager.cpp  utility.cpp
common/log/test/: BUILD  CMakeLists.txt  common_test.cpp  func_test.cpp  initial_test.cpp  log_test.cpp  test.bzl  utility_test.cpp
common/signal/: CMakeLists.txt  README.md
common/signal/include/public/ara/signal/: SignalManager.h
common/signal/src/: CMakeLists.txt  SignalManager.cc
common/signal/test/: BUILD  CMakeLists.txt  signal_test.cc
common/socket/include/private/ara/socket/: base_socket.h  connection_manager.h  logger.h
common/socket/include/public/ara/socket/: connection.h  data_buffer.h  server_tcp.h  socket.h  socket_udp.h  util.h
common/socket/src/: base_socket.cc  connection.cc  server_tcp.cc  socket_udp.cc  util.cc
common/socket/test/: BUILD  CMakeLists.txt  buffer_test.cc  socket_test.cc  udp_test.cc  util_test.cc
common/threadpool/include/public/ara/threadpool/: thread_pool.h
common/threadpool/test/: CMakeLists.txt  threadpool_test.cc
common/timer/: CMakeLists.txt  README.md
common/timer/cmake/: ara-timerConfig.cmake.in
common/timer/include/public/: CMakeLists.txt
common/timer/include/public/ara/timer/: TimerManager.h  timer.h
common/timer/src/: CMakeLists.txt  TimerManager.cc
common/timer/test/: BUILD  CMakeLists.txt  general.cc
common/yamlwrapper/: log_config.json
common/yamlwrapper/include/ara/yamlwrapper/: yaml_exception.h  yaml_logging.h  yaml_wrapper.h
common/yamlwrapper/src/: yaml_logging.cpp  yaml_wrapper.cpp
common/yamlwrapper/test/: BUILD  CMakeLists.txt  demo.cpp  get_dir_test.cpp  get_yaml_test.cpp  test.cpp
common/yamlwrapper/test/yaml_config_root/trailer/: trailer.yaml
common/yamlwrapper/test/yaml_config_root/vehicle/: vehicle.yaml
examples/: executor_demo.cpp  hal_timer_thread_demo.cpp  task_demo.cpp  timer_test.cpp
include/: executor.h  hal_log.h  hal_timer.h  hal_timer_thread.h  log_stream.h  logger.h  task.h  task_queue.h  timer.h  timer_manager.h
src/: log_stream.cpp  logger.cpp  minizip_modify.cpp  minizip_test.cpp  timer_manager.cpp
unit_tests/: timer_test.cpp
